@@ -1,3 +1,4 @@
+	* removed deprecated handle_alert template
 	* enable logging build config by default (but alert mask disabled by default)
 	* deprecated RSS API
 	* experimental support for BEP 38, "mutable torrents"
